Security: Add X-Content-Type-Options nosniff header and HttpOnly cookie configuration to prevent MIME confusion and XSS attacks

--- a/web.config
+++ b/web.config
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <system.web>
+    <!-- Prevent MIME confusion attacks and enforce HttpOnly cookies -->
+    <httpCookies httpOnlyCookies="true" requireSSL="true" />
+  </system.web>
   <system.webServer>
+    <!-- Security Headers -->
+    <httpProtocol>
+      <customHeaders>
+        <!-- Prevent MIME type sniffing -->
+        <add name="X-Content-Type-Options" value="nosniff" />
+        <!-- Additional security headers -->
+        <add name="X-Frame-Options" value="DENY" />
+        <add name="X-XSS-Protection" value="1; mode=block" />
+        <add name="Referrer-Policy" value="strict-origin-when-cross-origin" />
+      </customHeaders>
+    </httpProtocol>
     <handlers>
       <add name="iisnode" path="server/index.js" verb="*" modules="iisnode"/>
     </handlers>
